[package]
name = "relay-ranker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nostr-types = { git = "https://github.com/mikedilger/nostr-types", branch = "master" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
